# python_ral

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Personal_Assistant_Agent_PRD.md  build-push.ps1  build-push.sh  chat-assistant.html  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  start_app.py  start_rag.py  start_web.bat  yunxiao_mcp_tools.json  毕升内置工具接口返回.json
.claude/: settings.local.json
.cursor/: settings.json
.playwright-mcp/: page-2026-04-24T08-18-14-309Z.yml
assistant/backend/: app.py
assistant/frontend/: index.html  package-lock.json  package.json
bisheng_generator/: PROGRESS_FEATURE.md  QUICKSTART.md  README.md  REALTIME_PROGRESS_SUMMARY.md  api.py  main.py  test_progress.py  test_run.py
bisheng_generator/agents/: knowledge_agent.py  tool_agent.py  user_agent.py  workflow_agent.py
bisheng_generator/config/: config.py  logging_config.py
bisheng_generator/core/: bisheng_client.py  bisheng_workflow_import_client.py  graph.py  intent_history.py  prompt_loader.py  utils.py  workflow_io.py
bisheng_generator/db/: __init__.py  database.py  models.py
bisheng_generator/docs/: frontend-api.md  graph-flow.md  implementation.md
bisheng_generator/infrastructure/: __init__.py  checkpoint.py  model_factory.py
bisheng_generator/models/: __init__.py  intent.py  progress.py  workflow_state.py
bisheng_generator/prompts/: index.yaml
bisheng_generator/services/: __init__.py  bisheng_import_service.py  session_timeline_service.py  workflow_record_service.py
bisheng_generator/static/: app.js  index.html  style.css  test-sse.html
docs/: claude-code-commands.md  finance-assistant-requirements.md  hermes_agent_feasibility_report.md  hermes_agent_research_report.md  multi-user-isolation-guide.md  phase1-acceptance-checklist.md
expense_app/api/: main.py  schemas.py
expense_web/: index.html  package-lock.json  package.json
interview/: README.md
llm/: 01_a2a_helloworld.py  01_langchain_basics.py  02_a2a_client.py  02_langgraph_state_flow.py  03_a2a_langchain_agent.py  03_deepagents_quickstart.py  04_a2a_multi_agent.py  04_langgraph_with_tools.py  README.md
output/: workflow_1772533349.json  workflow_1772544161.json  workflow_1772545041.json  workflow_1772591340.json  workflow_1772617055.json  workflow_1772618837.json  workflow_1772690869.json  workflow_1772701639.json  workflow_1772780297.json  workflow_1772780370.json  workflow_1772780604.json  workflow_1772791917.json  workflow_1773137962.json  支持code的工作流.json
practice/: 03_langchain_skills.py  04_langgraph_demo.py  05_langchain_deepagent.py  07_langgraph_demo.py  08_langchain_demo.py  output.json
rag/: README.md  __init__.py  config.py
rag/api/: main.py  (+2 more)
tests/: conftest.py
(+193 files in other folders)
