[project]
name = "ral"
version = "0.1.0"
description = "练手项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentskills-fs>=0.1.0",
    "agentskills-langchain>=0.2.0",
    "dashscope>=1.25.12",
    "fastapi>=0.134.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
]
