[project]
name = "ral"
version = "0.1.0"
description = "练手项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentskills-fs>=0.1.0",
    "agentskills-langchain>=0.2.0",
    "dashscope>=1.25.12",
    "fastapi>=0.134.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "llama-index>=0.14.15",
    "llama-index-embeddings-langchain>=0.4.1",
    "llama-index-llms-langchain>=0.7.2",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "qdrant-client>=1.17.0",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "deepagents>=0.4.5",
    "langsmith>=0.7.9",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "autogenstudio>=0.0.49",
    "a2a-sdk>=0.3.25",
    "uapi-sdk-python>=0.1.10",
    "mem0ai>=1.0.9",
    "questionary>=2.1.1",
    "langfuse>=4.0.6",
    "snowflake-id>=1.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "nodejs-bin>=18.4.0a4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

